--- a/public/memorabilia-breaking-news.html
+++ b/public/memorabilia-breaking-news.html
@@ -140,7 +140,7 @@
 						<a href="#"><img src="items/breaking-news/non-lethal-projectile.jpeg"></a>
 					</div>
 
-					<div class="item-label">Black Lives Matter Protest Non-Lethal Projectile</div>
+					<div class="item-label">Non-Lethal Projectile</div>
 				</div>
 			</div>
 		</div>	
