added item pages

--- a/public/memorabilia-breaking-news.html
+++ b/public/memorabilia-breaking-news.html
@@ -142,6 +142,30 @@
 
 					<div class="item-label">Non-Lethal Projectile</div>
 				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="#"><img src="items/breaking-news/tiananmen-square-note.jpeg"></a>
+					</div>
+	
+					<div class="item-label">Chinese Government Tiananmen Square Note</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="#"><img src="items/breaking-news/sandy-hook-anchor-notes.jpeg"></a>
+					</div>
+		
+					<div class="item-label">Sandy Hook Shooting Anchor Notes</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="#"><img src="items/breaking-news/pulse-shooting-memorial-pass.jpeg"></a>
+					</div>
+
+					<div class="item-label">Pulse Nightclub Shooting Memorial Pass</div>
+				</div>
 			</div>
 		</div>	
 		
