--- a/public/memorabilia-conflict-balkans.html
+++ b/public/memorabilia-conflict-balkans.html
@@ -184,6 +184,14 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
+						<a href="#"><img src="items/conflict/bosnia-ids.jpeg"></a>
+					</div>
+				
+					<div class="item-label">Bosnian Press Identification Cards</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
 						<a href="items/conflict/cigarettes-bosnia.html"><img src="items/conflict/cigarettes-bosnia.jpeg"></a>
 					</div>
 
