--- a/public/memorabilia-miscellaneous.html
+++ b/public/memorabilia-miscellaneous.html
@@ -189,6 +189,14 @@
 
 					<div class="item-label">Simpsons Larry King Drawing</div>
 				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="#"><img src="items/miscellaneous/ted-turner-broadcasting-magazine.jpeg"></a>
+					</div>
+	
+					<div class="item-label">Ted Turner Broadcast Magazine</div>
+				</div>
 			</div>
 		</div>	
 		
