--- a/public/memorabilia-politics-bush-part-2.html
+++ b/public/memorabilia-politics-bush-part-2.html
@@ -80,12 +80,46 @@
 					<div class="item-label">2000 West Palm Beach Ballot Box</div>
 				</div>
 
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="items/#"><img src="items/politics/bush-gore-supreme-court-case-signed.jpeg"></a>
+					</div>
+	
+					<div class="item-label">Signed Bush-Gore Supreme Court Case</div>
+				</div>
+
+
 				<div class="gallery-layout">
 					<div class="gallery-item">
 						<a href="items/#"><img src="items/politics/white-house-christmas-invitation.jpeg"></a>
 					</div>
 
-					<div class="item-label">Bush White House Christmas Reception Invitation</div>
+					<div class="item-label">White House Christmas Reception Invitation</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="items/#"><img src="items/politics/bush-press-lounge.jpeg"></a>
+					</div>
+	
+					<div class="item-label">Signed Bush Press Corps Poster</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="items/#"><img src="items/politics/florida-counties.jpeg"></a>
+					</div>
+	
+					<div class="item-label">Large Map of Florida Counties</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="items/#"><img src="items/politics/west-palm-beach-test-ballot.jpeg"></a>
+					</div>
+	
+					<div class="item-label">West Palm Beach Test Ballot</div>
 				</div>
 
 				<div class="gallery-layout">
@@ -94,6 +128,22 @@
 					</div>
 
 					<div class="item-label">Air Force One Bush M&Ms</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="items/#"><img src="items/politics/air-force-one-tape-ball.jpeg"></a>
+					</div>
+		
+					<div class="item-label">Air Force One Tape Ball</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="items/#"><img src="items/politics/presidential-champagne-bush.jpeg"></a>
+					</div>
+	
+					<div class="item-label">George W. Bush Presidential Champagne</div>
 				</div>
 
 				<div class="gallery-layout">
@@ -114,10 +164,26 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
+						<a href="items/#"><img src="items/politics/bush-apec-script-john-king.jpeg"></a>
+					</div>
+						
+					<div class="item-label">John King Bush Trip Script</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="items/#"><img src="items/politics/kerry-vp-mistake-ny-post.jpeg"></a>
+					</div>
+	
+					<div class="item-label">NY Post Kerry VP Mistake</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
 						<a href="items/#"><img src="items/politics/bush-cheney-flags.jpeg"></a>
 					</div>
 
-					<div class="item-label">Bush- Cheney Flags</div>
+					<div class="item-label">Bush-Cheney Flags</div>
 				</div>
 
 				<div class="gallery-layout">
@@ -210,14 +276,6 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="items/#"><img src="items/politics/florida-counties.jpeg"></a>
-					</div>
-
-					<div class="item-label">Large Map of Florida Counties</div>
-				</div>
-
-				<div class="gallery-layout">
-					<div class="gallery-item">
 						<a href="items/#"><img src="items/politics/democratic-convention-2000-book.jpeg"></a>
 					</div>
 
@@ -230,30 +288,6 @@
 					</div>
 
 					<div class="item-label">Kerry Flip Flop Sign</div>
-				</div>
-
-				<div class="gallery-layout">
-					<div class="gallery-item">
-						<a href="items/#"><img src="items/politics/west-palm-beach-test-ballot.jpeg"></a>
-					</div>
-
-					<div class="item-label">West Palm Beach Test Ballot</div>
-				</div>
-
-				<div class="gallery-layout">
-					<div class="gallery-item">
-						<a href="items/#"><img src="items/politics/air-force-one-tape-ball.jpeg"></a>
-					</div>
-	
-					<div class="item-label">Air Force One Tape Ball</div>
-				</div>
-
-				<div class="gallery-layout">
-					<div class="gallery-item">
-						<a href="items/#"><img src="items/politics/bush-apec-script-john-king.jpeg"></a>
-					</div>
-
-					<div class="item-label">John King Bush Trip Script</div>
 				</div>
 
 				<div class="gallery-layout">
@@ -298,18 +332,10 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="items/#"><img src="items/politics/bush-press-lounge.jpeg"></a>
-					</div>
-
-					<div class="item-label">Signed Bush Press Corps Sign</div>
-				</div>
-
-				<div class="gallery-layout">
-					<div class="gallery-item">
 						<a href="items/#"><img src="items/politics/bush-press-schedule-trip-to-china.jpeg"></a>
 					</div>
 
-					<div class="item-label">Press Schedule for 2001 Presidential Trip to China</div>
+					<div class="item-label">2001 Bush China Trip Press Schedule</div>
 				</div>
 
 				<div class="gallery-layout">
@@ -326,14 +352,6 @@
 					</div>
 
 					<div class="item-label">Cheney-Lieberman Debate Poster</div>
-				</div>
-
-				<div class="gallery-layout">
-					<div class="gallery-item">
-						<a href="items/#"><img src="items/politics/presidential-champagne-bush.jpeg"></a>
-					</div>
-
-					<div class="item-label">George W. Bush Presidential Champagne</div>
 				</div>
 
 				<div class="gallery-layout">
@@ -357,7 +375,7 @@
 						<a href="items/#"><img src="items/politics/bradley-basketball-poster.jpeg"></a>
 					</div>
 
-					<div class="item-label">Bill Bradley Basketball Campaign Poster</div>
+					<div class="item-label">Bill Bradley Basketball Poster</div>
 				</div>
 			</div>
 		</div>	
