--- a/public/memorabilia-politics-clinton.html
+++ b/public/memorabilia-politics-clinton.html
@@ -130,6 +130,14 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
+						<a href="#"><img src="items/politics/dole-kemp-frank-sesno-shirt.jpeg"></a>
+					</div>
+	
+					<div class="item-label">Dole-Kemp Frank Sesno Signed Shirt</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
 						<a href="#"><img src="items/politics/bauer-nelson-bumper-stickers.jpeg"></a>
 					</div>
 
