--- a/public/memorabilia-politics-obama.html
+++ b/public/memorabilia-politics-obama.html
@@ -134,6 +134,14 @@
 
 					<div class="item-label">Singing Obama and McCain Dolls</div>
 				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="#"><img src="items/politics/cnn-staff-credential-2008-election-night.jpeg"></a>
+					</div>
+	
+					<div class="item-label">Obama 2008 Election Night Pass</div>
+				</div>
 				
 				<div class="gallery-layout">
 					<div class="gallery-item">
@@ -149,6 +157,22 @@
 					</div>
 
 					<div class="item-label">Hillary Clinton 2008 Campaign Sign</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="#"><img src="items/politics/new-hampshire-pundit-signs.jpeg"></a>
+					</div>
+	
+					<div class="item-label">Axelrod-Graham Pundit Signs</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="#"><img src="items/politics/pundit-sign-john-lackey.jpeg"></a>
+					</div>
+		
+					<div class="item-label">CNN-YouTube Debate Pundit Sign</div>
 				</div>
 
 				<div class="gallery-layout">
@@ -169,10 +193,50 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
+						<a href="#"><img src="items/politics/2008-dnc-convention-seating-map.jpeg"></a>
+					</div>
+	
+					<div class="item-label">2008 Democratic Convention Map</div>
+				</div>
+	
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="#"><img src="items/politics/2008-debate-banner.jpeg"></a>
+					</div>
+	
+					<div class="item-label">2008 Presidential Debate Banner</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
 						<a href="#"><img src="items/politics/2008-republican-debate-script.jpeg"></a>
 					</div>
 
 					<div class="item-label">2008 Republican Debate Script</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="#"><img src="items/politics/cnn-convention-guide-2012.jpeg"></a>
+					</div>
+	
+					<div class="item-label">CNN 2012 Convention Coverage Guide</div>
+				</div>
+	
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="#"><img src="items/politics/debate-tickets-2012.jpeg"></a>
+					</div>
+	
+					<div class="item-label">2012 Presidential Debate Tickets</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="#"><img src="items/politics/anderson-rep-debate-notes-2008.jpeg"></a>
+					</div>
+	
+					<div class="item-label">Anderson Cooper 2008 Debate Card</div>
 				</div>
 
 				<div class="gallery-layout">
@@ -189,6 +253,22 @@
 					</div>
 
 					<div class="item-label">Hillary Clinton Pinback</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="#"><img src="items/politics/obama-progress-poster.jpeg"></a>
+					</div>
+	
+					<div class="item-label">Obama Progress Campaign Poster</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="#"><img src="items/politics/romney-mitt.jpeg"></a>
+					</div>
+	
+					<div class="item-label">Mitt Romney Foam Mitt</div>
 				</div>
 
 				<div class="gallery-layout">
@@ -217,34 +297,10 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/politics/cnn-convention-guide-2012.jpeg"></a>
-					</div>
-
-					<div class="item-label">CNN 2012 Convention Coverage Guide</div>
-				</div>
-
-				<div class="gallery-layout">
-					<div class="gallery-item">
-						<a href="#"><img src="items/politics/debate-tickets-2012.jpeg"></a>
-					</div>
-
-					<div class="item-label">2012 Presidential Debate Tickets</div>
-				</div>
-
-				<div class="gallery-layout">
-					<div class="gallery-item">
 						<a href="#"><img src="items/politics/palin-straw-poll.jpeg"></a>
 					</div>
 
 					<div class="item-label">Sarah Palin Straw Poll Cards</div>
-				</div>
-
-				<div class="gallery-layout">
-					<div class="gallery-item">
-						<a href="#"><img src="items/politics/anderson-rep-debate-notes-2008.jpeg"></a>
-					</div>
-
-					<div class="item-label">Anderson Cooper 2008 Debate Card</div>
 				</div>
 
 				<div class="gallery-layout">
@@ -279,31 +335,12 @@
 					<div class="item-label">Plain Dealer Obama-Clinton Debate Issue</div>
 				</div>
 
-
-				<div class="gallery-layout">
-					<div class="gallery-item">
-						<a href="#"><img src="items/politics/obama-progress-poster.jpeg"></a>
-					</div>
-
-					<div class="item-label">Obama Progress Campaign Poster</div>
-				</div>
-
-
 				<div class="gallery-layout">
 					<div class="gallery-item">
 						<a href="#"><img src="items/politics/republican-debate.jpeg"></a>
 					</div>
 
 					<div class="item-label">2008 Republican Debate Poster</div>
-				</div>
-
-
-				<div class="gallery-layout">
-					<div class="gallery-item">
-						<a href="#"><img src="items/politics/romney-mitt.jpeg"></a>
-					</div>
-
-					<div class="item-label">Mitt Romney Foam Mitt</div>
 				</div>
 
 				<div class="gallery-layout">
@@ -328,22 +365,6 @@
 					</div>
 
 					<div class="item-label">2008 Republican Convention Guide</div>
-				</div>
-
-				<div class="gallery-layout">
-					<div class="gallery-item">
-						<a href="#"><img src="items/politics/2008-dnc-convention-seating-map.jpeg"></a>
-					</div>
-
-					<div class="item-label">2008 Democratic Convention Map</div>
-				</div>
-
-				<div class="gallery-layout">
-					<div class="gallery-item">
-						<a href="#"><img src="items/politics/2008-debate-banner.jpeg"></a>
-					</div>
-
-					<div class="item-label">2008 Presidential Debate Banner</div>
 				</div>
 			</div>
 		</div>	
