added item pages

--- a/public/items/politics/1984-election-handout.html
+++ b/public/items/politics/1984-election-handout.html
@@ -58,7 +58,7 @@
 			<div class="item-block">
 
 				<!-- Trigger the Modal -->
-				<img id="1984ElectionHandout" class="item-image" src="cnn-1984-election-coverage-propaganda.jpeg" width="300" height="200" alt="Caption">
+				<img id="1984ElectionHandout" class="item-image" src="1984-election-handout.jpeg" width="300" height="200" alt="Caption">
 
 				<!-- The Modal -->
 				<div id="1984ElectionHandoutModal" class="modal">
