--- a/public/items/politics/nixon-presidential-seal.html
+++ b/public/items/politics/nixon-presidential-seal.html
@@ -58,7 +58,7 @@
 			<div class="item-block">
 
 				<!-- Trigger the Modal -->
-				<img id="nixonPresidentialSeal" class="item-image" src="presidential-seal.jpeg" width="300" height="200" alt="Caption">
+				<img id="nixonPresidentialSeal" class="item-image" src="nixon-presidential-seal.jpeg" width="300" height="200" alt="Caption">
 
 				<!-- The Modal -->
 				<div id="nixonPresidentialSealModal" class="modal">
