--- a/public/memorabilia-conflict-arab-israeli.html
+++ b/public/memorabilia-conflict-arab-israeli.html
@@ -80,7 +80,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/conflict/arafat-signed.jpeg"></a>
+						<a href="items/conflict/arafat-signed-keffiyeh.html"><img src="items/conflict/arafat-signed-keffiyeh.jpeg"></a>
 					</div>
 
 					<div class="item-label">Arafat Signed Keffiyeh</div>
