--- a/public/memorabilia-conflict-balkans.html
+++ b/public/memorabilia-conflict-balkans.html
@@ -137,10 +137,10 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="items/conflict/olympic-jersey.html"><img src="items/conflict/olympic-jersey.jpeg"></a>
+						<a href="items/conflict/olympic-jerseys.html"><img src="items/conflict/olympic-jerseys.jpeg"></a>
 					</div>
 
-					<div class="item-label">Sarajevo Olympics Jersey</div>
+					<div class="item-label">Sarajevo Olympics Jerseys</div>
 				</div>
 
 				<div class="gallery-layout">
@@ -232,10 +232,10 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="items/conflict/sarajevo-library.html"><img src="items/conflict/sarajevo-library.jpeg"></a>
+						<a href="items/conflict/sarajevo-library-pieces.html"><img src="items/conflict/sarajevo-library-pieces.jpeg"></a>
 					</div>
 
-					<div class="item-label">Sarajevo Library Piece</div>
+					<div class="item-label">Sarajevo Library Pieces</div>
 				</div>
 
 				<div class="gallery-layout">
@@ -280,10 +280,10 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/conflict/maybe-airlines-stamp.jpeg"></a>
+						<a href="#"><img src="items/conflict/maybe-airlines-stamps.jpeg"></a>
 					</div>
 
-					<div class="item-label">Maybe Airlines Passport Stamp</div>
+					<div class="item-label">Maybe Airlines Passport Stamps</div>
 				</div>
 
 				<div class="gallery-layout">
