--- a/public/items/politics/1972-reagan-luncheon-invitation.html
+++ b/public/items/politics/1972-reagan-luncheon-invitation.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 	<head>
-   		<title>Reagan Ranch Tape</title>
+   		<title>Reagan Luncheon Invitation</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="../../css/reset.css">
@@ -17,9 +17,9 @@
 		<header>
 			<div class="clear">
 				<div class="title">
-					<h1 class="logo">The Reagan Years</h1>
+					<h1 class="logo">Pre-1980 Politics</h1>
 				
-					<p>1980-1988</p>
+					<p>1776-1980</p>
 				</div>
 
 				<div class="headergraphic">
@@ -45,7 +45,7 @@
 		</nav>
 		
 		<div>
-			<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../../memorabilia-politics.html">Politics</a> &gt; <a href="../../memorabilia-politics-reagan.html">Reagan</a></p>
+			<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../../memorabilia-politics.html">Politics</a> &gt; <a href="../../memorabilia-politics-pre-1980.html">Pre-1980</a></p>
 		</div>
 
 		<div>
@@ -53,30 +53,32 @@
 		</div>
 
 		<div class="item-pages">
-			<h2>Reagan Ranch 3/4" Video Tape</h2>
+			<h2>Reagan/Heath Luncheon Invitation</h2>
 
 			<div class="item-block">
 
 				<!-- Trigger the Modal -->
-				<img id="reaganRanchTape" class="item-image" src="reagan-tape-1980.jpeg" width="300" height="200" alt="Caption">
+				<img id="reaganLuncheonInvitation" class="item-image" src="1972-reagan-luncheon-invitation.jpeg" width="300" height="200" alt="Caption">
 
 				<!-- The Modal -->
-				<div id="reaganRanchTapeModal" class="modal">
+				<div id="reaganLuncheonInvitationModal" class="modal">
 
   					<!-- The Close Button -->
-  					<span class="close" onclick="document.getElementById('reaganRanchTapeModal').style.display='none'">&times;</span>
+  					<span class="close" onclick="document.getElementById('reaganLuncheonInvitationModal').style.display='none'">&times;</span>
 
   					<!-- Modal Content (The Image) -->
-  					<img class="modal-content" id="reaganRanchTapeImage">
+  					<img class="modal-content" id="reaganLuncheonInvitationImage">
 
   					<!-- Modal Caption (Image Text) -->
-  					<div id="reaganRanchTapeCaption">Caption Text</div>
+  					<div id="reaganLuncheonInvitationCaption">Caption Text</div>
 				</div>
 
 				<div>
 					<p>
-						This is a video tape recorded during the White House Press Corps' first visit to the Reagan Ranch on November 7, 1980. 
-						Known as Rancho del Cielo, the property was located in the mountains not far from Santa Barbara, California.
+						This invitation was for a luncheon held at 10 Downing Street on July 17, 1972. The event was hosted by British 
+						Prime Minister Edward Heath. Ronald Reagan, Governor of California at the time, was on a twenty-day European trip, 
+						taken on behalf of President Richard Nixon. Reagan was visiting world leaders in European capital cities. While 
+						Reagan was on the trip, President Nixon was occupied with the Watergate break in that had taken place one month earlier. 
 					</p>
 				</div>
 			</div>	
